--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,11 @@ redis = { version = "0.29.1", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tower-http = { version = "0.6.2", features = ["cors"] }
+
+thiserror = "2.0.12"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["rt", "macros"] }
+
+[features]
+mock = []
