--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1"
 tower-http = { version = "0.6.2", features = ["cors"] }
 
 thiserror = "2.0.12"
-
+dotenvy = "0.15.7"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt", "macros"] }
