--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tower-http = { version = "0.6.2", features = ["cors"] }
 
 thiserror = "2.0.12"
 dotenvy = "0.15.7"
+tracing = "0.1.41"
+tracing-subscriber = "0.3"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["rt", "macros"] }
